# CCQuickStartup

./: .gitignore  .qmake.conf  CCQuickStartup.pro  CMakeLists.txt  README.md
examples/: CMakeLists.txt  examples.pro
examples/toklive/: CMakeLists.txt  toklive.pro
examples/toklive/controls/: CMakeLists.txt  controls.pro  qmldir  toklive_plugin.cpp  toklive_plugin.h
examples/toklive/controls/impl/: FramelessWorkerEvent.h  edgetoedgemodehelper.cpp  edgetoedgemodehelper.h  frameless.cpp  frameless.h  framelessattached.cpp  framelessattached.h  framelessworker.cpp  framelessworker.h  framelessworkerevent.cpp  iconimageprovider.cpp  iconimageprovider.h  impl.pri  tokliveqmlinstance.cpp  tokliveqmlinstance.h
examples/toklive/controls/modules/: modules.qrc
examples/toklive/controls/modules/Controls/: CheckedAnimateButton.qml  CustomButton.qml  LineEdit.qml  SearchEdit.qml  TokIcon.qml
examples/toklive/controls/modules/Style/: Style.qml
examples/toklive/controls/modules/Style/desktop/: CustomButtonStyle.qml  DesktopStyle.qml  SearchEditStyle.qml
examples/toklive/controls/modules/Style/mobile/: CustomButtonStyle.qml  MobileStyle.qml  SearchEditStyle.qml
examples/toklive/entity/: CMakeLists.txt  entity.pro  toklive_entity.cpp  toklive_entity.h
examples/toklive/entity/qml/src/: MainPane.qml  MainWindow.qml  PopupSearchEdit.qml
examples/toklive/main/: CMakeLists.txt  main.cpp  main.pro  qtquickcontrols2.conf
examples/toklive/mainwindow/: mainwindow.pro  toklivemainwindow.cpp  toklivemainwindow.h
examples/toklive/mainwindow/icons/: icons.qrc
examples/toklive/mainwindow/icons/TokLive-desktop/: index.theme
examples/toklive/mainwindow/qml/: qml.qrc
examples/toklive/mainwindow/qml/src/: LeftNavigationBar.qml  LeftPane.qml  LogoPane.qml  MainWindow.qml  PopupPane.qml  RightPane.qml  RoundAnimateButton.qml  WindowButtonPane.qml
examples/toklive/mainwindow/res/: res.qrc
examples/toklive/preload/: CMakeLists.txt  PreloadOverlay.qml  PreloadWindow.qml  plugin.json  preload.pro  qml.qrc  toklive_preload.cpp  toklive_preload.h  toklivepreload.cpp  toklivepreload.h
examples/toklive/preload/qml/: Countdown.qml  PreloadWindow.qml
examples/toklive/preload/res/: res.qrc
plugin/: ccquickstartup_plugin.cpp  ccquickstartup_plugin.h  plugin.pro  qmldir
src/: AppStartupApplicationFactory.h  CMakeLists.txt  appstartupinstance.cpp  appstartupinstance.h  appstartupinstanceattached.cpp  appstartupinstanceattached.h  appstartuppreloadattached.cpp  appstartuppreloadattached.h  ccquickstartup_global.h  ccquickstartupmainwindowinterface.cpp  ccquickstartupmainwindowinterface.h  ccquickstartuppreloadinterface.cpp  ccquickstartuppreloadinterface.h  ccstartupmainwindowinterface.cpp  ccstartupmainwindowinterface.h  ccstartuppreloadinterface.cpp  ccstartuppreloadinterface.h  qml.qrc  quickappstartupitem.cpp  quickappstartupitem.h  src.pro
src/interface/: appstartupentityinterface.cpp  appstartupentityinterface.h  appstartuppreloadinterface.cpp  appstartuppreloadinterface.h  interface.pri
src/items/: AppStartupInitialProperties.h  apppreloaditem.cpp  apppreloaditem.h  appstartupcomponent.cpp  appstartupcomponent.h  appstartupcomponentinformation.cpp  appstartupcomponentinformation.h  appstartupinitialproperties.cpp  appstartupinitialproperties.h  appstartupinstanceattached.cpp  appstartupinstanceattached.h  appstartupinterface.cpp  appstartupinterface.h  appstartupitem.cpp  appstartupitem.h  appstartupitemattached.cpp  appstartupitemattached.h  appstartupmodulegroup.cpp  appstartupmodulegroup.h  appstartupmoduleinformation.cpp  appstartupmoduleinformation.h  appstartuppreloadattached.cpp  appstartuppreloadattached.h  appstartuppreloaditem.cpp  appstartuppreloaditem.h  appstartuptransitiongroup.cpp  appstartuptransitiongroup.h  items.pri
src/private/: appstartupcomponent.cpp  appstartupcomponent.h  appstartupentitycomponent.cpp  appstartupentitycomponent.h  appstartupentitymodule.cpp  appstartupentitymodule.h  appstartupentitymoduleobject.cpp  appstartupentitymoduleobject.h  appstartupinstance_p.cpp  appstartupinstance_p.h  appstartupmainwindowcomponent.cpp  appstartupmainwindowcomponent.h  appstartupmodule.cpp  appstartupmodule.h  appstartupmoduleobject.cpp  appstartupmoduleobject.h  appstartuppreloadcomponent.cpp  appstartuppreloadcomponent.h  appstartuppreloadmodule.cpp  appstartuppreloadmodule.h  appstartuppreloadmoduleobject.cpp  appstartuppreloadmoduleobject.h  appstartuptransitionmanager.h  defines_p.h  private.pri
src/qml/container/: ApplicationWindow.qml  Window.qml
src/qml/tansition/: FlickTransition.qml
src/qml/transition/: FlickTransition.qml
